fixed css styling not showing on server

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/src/img/background.png');
+  background-image: url('/img/background.png');
   color: #ffffff;
 }
 
